--- a/server/social/views/scripts.jade
+++ b/server/social/views/scripts.jade
@@ -2,5 +2,13 @@ script(type="text/javascript", src="/vendor/angular/angular.js")
 script(type="text/javascript", src="/vendor/angular-resource/angular-resource.js")
 script(type="text/javascript", src="/vendor/angular-route/angular-route.js")
 script(type="text/javascript", src="/app/js/app.js")
+
+//controllers  
 script(type="text/javascript" src="/app/js/controllers/loginController.js")
+script(type="text/javascript" src="/app/js/controllers/profileController.js")
+script(type="text/javascript" src="/app/js/controllers/playlistController.js")
+
+
+//services
+script(type="text/javascript" src="/app/js/services/loginService.js")
 
