implemented route resolve

--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -15,4 +15,5 @@ script(type="text/javascript" src="/app/profile/playlistController.js")
 //services
 script(type="text/javascript" src="/app/login/loginService.js")
 script(type="text/javascript" src="/app/login/identity.js")
+script(type="text/javascript" src="/app/login/userResource.js")
 
